# coding-challenges

./: .clang-tidy  .clangd  .dockerignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yaml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/base-scripts/: install-llvm.sh  install-omz.sh
.github/workflows/: cmake-single-platform.yml
001-wc-tool/: CMakeLists.txt  lib.cpp  lib.hpp  main.cpp  test.cpp
scripts/: install_llvm.sh  install_omz.sh
